@@ -1,3 +1,9 @@
+2002-12-11  Bruno Haible  <bruno@clisp.org>
+
+	* setenv.c (alloca): Fall back to malloc.
+	(freea): New macro.
+	(setenv): Use freea() to free memory allocated with alloca().
+
 2003-01-12  Bruno Haible  <bruno@clisp.org>
 
 	* classpath.h: New file.
